fix chamber directory spacing

--- a/course-work/wdd230-archive/final-project/css/small.css
+++ b/course-work/wdd230-archive/final-project/css/small.css
@@ -266,9 +266,10 @@ div.x {
     flex-direction: column;
     justify-content: center;
     width: 90%;
-    height: 90%;
+    height: 200px;
     padding: 15px;
-    background-color: rgba(158, 99, 96, 0.4);
+    border: 1px solid #5D6B62;
+    background-color: rgb(133 133 133 / 17%);
     border-radius: 2px;
     text-align: center;
 }
